unpackaged/main/default/objects/Service_Portfolio__c/Service_Portfolio__c.object-meta.xml
<CustomObject>
    <label>Service Portfolio</label>
    <nameField>
        <label>Service Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Portfolio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>