unpackaged/main/default/objects/Service_Portfolio__c/fields/ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Numéro du client</description>
    <label>ERP Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services Portfolio</relationshipLabel>
    <relationshipName>Services_Portfolio</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>