unpackaged/main/default/objects/Service_Portfolio__c/fields/Quantity_of_User__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_User__c</fullName>
    <label>Quantity of User</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>