unpackaged/main/default/objects/Service_Portfolio__c/fields/Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Service paramétrage associé</description>
    <label>Service Id</label>
    <referenceTo>Service_Parameter__c</referenceTo>
    <relationshipLabel>Services Portfolio</relationshipLabel>
    <relationshipName>Services_Portfolio1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>