unpackaged/main/default/objects/Service_Portfolio__c/fields/Service_subscription_status__c.field-meta.xml
<CustomField>
    <fullName>Service_subscription_status__c</fullName>
    <description>Statut</description>
    <label>Service subscription status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>