unpackaged/main/default/objects/Service_Portfolio__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account client cible</description>
    <label>Target Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services Portfolio (Target Account)</relationshipLabel>
    <relationshipName>Services_Portfolio1</relationshipName>
    <type>Lookup</type>
</CustomField>