unpackaged/main/default/objects/Service_Portfolio__c/fields/Validity_end_date__c.field-meta.xml
<CustomField>
    <fullName>Validity_end_date__c</fullName>
    <description>Date fin de validité</description>
    <label>Validity end date</label>
    <type>Date</type>
</CustomField>